--- a/index.html
+++ b/index.html
@@ -192,72 +192,95 @@
           const totalGoldValue = myGoldGrams * commision;
           const Goldpr = avgGoldPrice ? ((goldPrice - avgGoldPrice) / avgGoldPrice) * 100 : 0;
 
-          // تبدیل تاریخ جلالی (شمسی) به تاریخ میلادی (Date object)
+       // تابع تبدیل جلالی (شمسی) به تاریخ میلادی — خروجی: شیء Date
 function jalaliToGregorian(jy, jm, jd) {
-  let a = jy - 979;
-  let b = jm - 1;
-  let c = jd - 1;
+  jy = parseInt(jy, 10);
+  jm = parseInt(jm, 10);
+  jd = parseInt(jd, 10);
 
-  let gDay =
-    365 * a +
-    Math.floor(a / 33) * 8 +
-    Math.floor(((a % 33) + 3) / 4) +
-    186 * b -
-    Math.floor((b - 6) / 2) +
-    c +
-    79;
+  var jy2 = jy - 979;
+  var jm2 = jm - 1;
+  var jd2 = jd - 1;
 
-  let gy = 1600 + 400 * Math.floor(gDay / 146097);
-  gDay %= 146097;
+  var j_day_no = 365 * jy2 + Math.floor(jy2 / 33) * 8 + Math.floor(((jy2 % 33) + 3) / 4);
+  var j_month_days = [31,31,31,31,31,31,30,30,30,30,30,29];
+  for (var i = 0; i < jm2; ++i) {
+    j_day_no += j_month_days[i];
+  }
+  j_day_no += jd2;
 
-  let leap = true;
-  if (gDay >= 36525) {
-    gDay--;
-    gy += 100 * Math.floor(gDay / 36524);
-    gDay %= 36524;
+  var g_day_no = j_day_no + 79;
+  var gy = 1600 + 400 * Math.floor(g_day_no / 146097);
+  g_day_no = g_day_no % 146097;
 
-    leap = gDay >= 365;
-    if (!leap) gDay++;
+  var leap = true;
+  if (g_day_no >= 36525) {
+    g_day_no--;
+    gy += 100 * Math.floor(g_day_no / 36524);
+    g_day_no = g_day_no % 36524;
+    if (g_day_no >= 365) {
+      g_day_no++;
+    } else {
+      leap = false;
+    }
   }
 
-  gy += 4 * Math.floor(gDay / 1461);
-  gDay %= 1461;
+  gy += 4 * Math.floor(g_day_no / 1461);
+  g_day_no = g_day_no % 1461;
 
-  if (gDay >= 366) {
+  if (g_day_no >= 366) {
     leap = false;
-    gDay--;
-    gy += Math.floor(gDay / 365);
-    gDay %= 365;
+    g_day_no -= 366;
+    gy += Math.floor(g_day_no / 365);
+    g_day_no = g_day_no % 365;
   }
 
-  let gd = gDay + 1;
-  let gm;
-  for (gm = 0; gm < 12; gm++) {
-    let v = gm == 1 && leap ? 29 : [31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31][gm];
-    if (gd <= v) break;
-    gd -= v;
+  var gregorianMonthDays = [0,31,(leap?29:28),31,30,31,30,31,31,30,31,30,31];
+  var gm = 0, gd = 0;
+  for (var m = 1; m <= 12; m++) {
+    var v = gregorianMonthDays[m];
+    if (g_day_no < v) {
+      gm = m;
+      gd = g_day_no + 1;
+      break;
+    }
+    g_day_no -= v;
   }
-  return [gy, gm + 1, gd];
+
+  // بازگرداندن یک شیء Date با ساعت محلی روی ساعت 00:00
+  return new Date(gy, gm - 1, gd);
 }
 
-function getDaysFromStart(start) {
-  const [jy, jm, jd] = start.split("/").map(Number);
-  const [gy, gm, gd] = jalaliToGregorian(jy, jm, jd);
+// محاسبه تعداد روزها (مبدا شمسی به صورت رشته "YYYY/MM/DD")
+function getDaysFromShamsiStart(startShamsiStr) {
+  if (!startShamsiStr || typeof startShamsiStr !== "string") return NaN;
+  const parts = startShamsiStr.split("/").map(p => Number(p));
+  if (parts.length !== 3 || parts.some(isNaN)) return NaN;
 
-  const startDate = new Date(gy, gm - 1, gd);
+  const [jy, jm, jd] = parts;
+  const startDate = jalaliToGregorian(jy, jm, jd);
+
+  // استفاده از UTC برای جلوگیری از تفاوت‌های منطقه زمانی
+  const startUtc = Date.UTC(startDate.getFullYear(), startDate.getMonth(), startDate.getDate());
   const today = new Date();
-  startDate.setHours(0, 0, 0, 0);
-  today.setHours(0, 0, 0, 0);
+  const todayUtc = Date.UTC(today.getFullYear(), today.getMonth(), today.getDate());
 
-  const diffTime = today - startDate;
-  return Math.floor(diffTime / (1000 * 60 * 60 * 24));
+  const diffDays = Math.floor((todayUtc - startUtc) / (1000 * 60 * 60 * 24));
+  return diffDays;
 }
 
-const startDateString = "1404/09/04"; // 👈 تاریخ مبدا
-const daysPassed = getDaysFromStart(startDateString);
+// ---------- تنظیم تاریخ مبدا به صورت دستی ----------
+const startDateString = "1404/09/04"; // <-- این را دستی تغییر بده
+const daysPassed = getDaysFromShamsiStart(startDateString);
+
+// اگر خواستی از منفی جلوگیری کنی و همیشه حداقل 0 نمایش بدی، از خط بعدی استفاده کن:
+// const safeDays = Number.isFinite(daysPassed) ? Math.max(0, daysPassed) : 0;
 
 document.getElementById("portfolio-title").innerText =
   `بازدهی سرمایه‌گذاری – ${toPersianNumber(daysPassed)} روز`;
+
+// برای دیباگ (در کنسول ببین):
+console.log("startShamsi:", startDateString, "daysPassed:", daysPassed);
 
 
 
