--- a/index.html
+++ b/index.html
@@ -192,88 +192,17 @@
           const totalGoldValue = myGoldGrams * commision;
           const Goldpr = avgGoldPrice ? ((goldPrice - avgGoldPrice) / avgGoldPrice) * 100 : 0;
 
-   // تابع معتبر جلالی -> میلادی (همکاری‌شده و مقاوم)
-function jalaliToGregorian(jy, jm, jd) {
-  jy = parseInt(jy, 10);
-  jm = parseInt(jm, 10);
-  jd = parseInt(jd, 10);
+          // مبدا تاریخ به میلادی (سال، ماه، روز)
+// توجه: ماه‌ها از 0 تا 11 هستند، یعنی 0 = ژانویه، 11 = دسامبر
+const startDate = new Date(2025, 11, 15); // ← این تاریخ را به میلادی وارد کن
 
-  var jy2 = jy - 979;
-  var jm2 = jm - 1;
-  var jd2 = jd - 1;
+// محاسبه تعداد روزها
+const today = new Date();
+const diffDays = Math.floor((today - startDate) / (1000 * 60 * 60 * 24));
 
-  var j_day_no = 365 * jy2 + Math.floor(jy2 / 33) * 8 + Math.floor(((jy2 % 33) + 3) / 4);
-  var j_month_days = [31,31,31,31,31,31,30,30,30,30,30,29];
-  for (var i = 0; i < jm2; ++i) {
-    j_day_no += j_month_days[i];
-  }
-  j_day_no += jd2;
-
-  var g_day_no = j_day_no + 79;
-  var gy = 1600 + 400 * Math.floor(g_day_no / 146097);
-  g_day_no = g_day_no % 146097;
-
-  if (g_day_no >= 36525) {
-    g_day_no--;
-    gy += 100 * Math.floor(g_day_no / 36524);
-    g_day_no = g_day_no % 36524;
-    if (g_day_no >= 365) {
-      g_day_no++;
-    }
-  }
-
-  gy += 4 * Math.floor(g_day_no / 1461);
-  g_day_no = g_day_no % 1461;
-
-  if (g_day_no >= 366) {
-    g_day_no -= 366;
-    gy += Math.floor(g_day_no / 365);
-    g_day_no = g_day_no % 365;
-  }
-
-  var gregorianMonthDays = [0,31, ( ( (gy%4===0 && gy%100!==0) || gy%400===0) ? 29 : 28 ),31,30,31,30,31,31,30,31,30,31];
-  var gm = 0, gd = 0;
-  for (var m = 1; m <= 12; m++) {
-    var v = gregorianMonthDays[m];
-    if (g_day_no < v) {
-      gm = m;
-      gd = g_day_no + 1;
-      break;
-    }
-    g_day_no -= v;
-  }
-
-  // بازگرداندن Date (ساعت محلی روی 00:00) — ما در مقایسه از UTC استفاده می‌کنیم
-  return new Date(gy, gm - 1, gd);
-}
-
-// محاسبه تعداد روز از تاریخ مبدا شمسی (رشته "YYYY/MM/DD")
-function getDaysFromShamsiStart(startShamsiStr) {
-  if (!startShamsiStr || typeof startShamsiStr !== "string") return NaN;
-  const parts = startShamsiStr.split("/").map(p => Number(p));
-  if (parts.length !== 3 || parts.some(isNaN)) return NaN;
-
-  const [jy, jm, jd] = parts;
-  const startDate = jalaliToGregorian(jy, jm, jd);
-
-  // استفاده از UTC برای جلوگیری از اثر منطقه زمانی
-  const startUtc = Date.UTC(startDate.getFullYear(), startDate.getMonth(), startDate.getDate());
-  const now = new Date();
-  const todayUtc = Date.UTC(now.getFullYear(), now.getMonth(), now.getDate());
-
-  const diffDays = Math.floor((todayUtc - startUtc) / (1000 * 60 * 60 * 24));
-
-  return diffDays;
-}
-
-// ---------- این مقدار را دستی در کدت بگذار ----------
-const startDateString = "1404/09/04"; // ← این را دقیقاً همانطور که می‌خواهی قرار بده
-const daysPassed = getDaysFromShamsiStart(startDateString);
-
-
+// نمایش در صفحه
 document.getElementById("portfolio-title").innerText =
-  `بازدهی سرمایه‌گذاری – ${toPersianNumber(daysPassed)} روز`;
-
+  `بازدهی سرمایه‌گذاری – ${toPersianNumber(diffDays)} روز`;
 
 
           
