--- a/index.html
+++ b/index.html
@@ -192,8 +192,6 @@
           const totalGoldValue = myGoldGrams * commision;
           const Goldpr = avgGoldPrice ? ((goldPrice - avgGoldPrice) / avgGoldPrice) * 100 : 0;
 
-          // مبدا تاریخ به میلادی (سال، ماه، روز)
-// توجه: ماه‌ها از 0 تا 11 هستند، یعنی 0 = ژانویه، 11 = دسامبر
 const startDate = new Date(2025, 11, 25); // ← این تاریخ را به میلادی وارد کن
 
 // محاسبه تعداد روزها
@@ -202,7 +200,7 @@ const diffDays = Math.floor((today - startDate) / (1000 * 60 * 60 * 24));
 
 // نمایش در صفحه
 document.getElementById("portfolio-title").innerText =
-  `بازدهی سرمایه‌گذاری – ${toPersianNumber(diffDays)} روز`;
+  `بازدهی سرمایه‌گذاری طی ${toPersianNumber(diffDays)} روز`;
 
 
           
