--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       در حال دریافت اطلاعات رمزارزها...
     </section>
   
-    <section class="bg-white rounded-xl shadow-2xl p-3 text-center persian-numbers">
+    <section class="bg-white rounded-xl shadow-2xl p-3 text-center persian-numbers border-4 border-blue-500">
       <h3 id="portfolio-title" class="text-2xl font-extrabold text-purple-800 mb-2 drop-shadow-lg">طلای آبشده</h3>
       <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-black mt-3 drop-shadow-lg">مقدار ریالی سرمایه گذاری: ۱۴۳۰۰۰</p>
       <p id="merged-value" class="text-xl font-bold persian-numbers text-black mt-2 drop-shadow-lg">...</p>
