--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <script>
     const ayarUnits = 13916;
     const avgayarPrice = 238213;
-    const btcAmount = 0.01;
+    const btcAmount = 0.0002921;
     const myGoldGrams = 0;
     const sarmayeh = 143000;
     const avgGoldPrice = 0; // اگر نیاز دارید مقدار دیگری باشد، مقداردهی کنید
