--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     const AVG_kahroba_PRICE = 111873;
     const BTC_AMOUNT = 0.0002921;
     const MY_GOLD_GRAMS = 0;
-    const INVESTMENT_BASE = 143000;
+    const INVESTMENT_BASE = 5311000;
     const START_DATE = new Date(2025, 10, 25); // 25 نوامبر 2025
 
     // ابزارها
