--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   </style>
 </head>
 <body class="bg-yellow-400 text-black">
-  <main class="max-w-xl mx-auto p-3 space-y-5">
+  <main class="max-w-xl mx-auto p-3 space-y-2">
     <section class="bg-purple-800 rounded-xl shadow-2xl p-3 text-center">
        <button id="refresh-btn" class="text-white text-lg font-bold w-full">🔄 بروزرسانی ارزش دارایی ها</button>
     </section>
 
     <section class="bg-white rounded-xl shadow-2xl p-3 text-center">
-      <div class="text-lg font-bold space-y-2 persian-numbers drop-shadow-lg">
+      <div class="text-lg font-bold space-y-1 persian-numbers drop-shadow-lg">
         <div id="usd-box">دلار: ...</div>
         <div id="usdt-box">تتر: ...</div>
         <div id="gold18-box">طلای ۱۸ عیار: ...</div>
@@ -44,7 +44,7 @@
 
     <section class="bg-white rounded-xl shadow-2xl p-3 text-center persian-numbers border-4 border-blue-500">
       <h3 id="portfolio-title" class="text-2xl font-extrabold text-purple-800 mb-2 drop-shadow-lg">طلای آبشده</h3>
-      <p id="portfolio-value" class="text-2xl font-extrabold persian-numbers text-black mt-3 drop-shadow-lg">مقدار ریالی سرمایه گذاری: ۱۴۳۰۰۰</p>
+      <p id="portfolio-value" class="text-xl font-extrabold persian-numbers text-black mt-3 drop-shadow-lg">مقدار ریالی سرمایه گذاری: ۱۴۳۰۰۰</p>
       <p id="merged-value" class="text-xl font-bold persian-numbers text-black mt-2 drop-shadow-lg">...</p>
       <p id="profit-percent" class="text-xl font-bold persian-numbers mt-2 drop-shadow-lg">...</p>
     </section>
@@ -150,8 +150,8 @@
           const btcm = BTC_AMOUNT * (bitcoin.usd || 0);
           const getColor = c => c > 0 ? 'green' : c < 0 ? 'red' : 'black';
           animateElement('crypto-box', `
-            <div class="text-2xl font-extrabold drop-shadow-lg text-purple-800">رمزارزها</div>
-            <div class="space-y-2 mt-5 text-lg font-bold drop-shadow-lg">
+            <div class="text-2xl font-extrabold drop-shadow-lg text-purple-800">بیت کوین</div>
+            <div class="space-y-1 mt-5 text-lg font-bold drop-shadow-lg">
               <div style="color:${getColor(btcChange)}">
                 BTC: $${toPersianNumber((bitcoin.usd||0).toLocaleString())}
                 (%${toPersianNumber(Math.abs((btcChange||0).toFixed(2)))})
