--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
 
     <section id="final-box" class="bg-white rounded-xl shadow-2xl p-3 text-center text-black mt-3 persian-numbers border-2 border-blue-700">
-      در حال محاسبه سود/زیان...
+      در حال محاسبه سود/زیان
     </section>
 
     <p id="last-update" class="text-sm text-black text-center drop-shadow-lg mt-4 persian-numbers">در حال دریافت زمان...</p>
