--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
     <section class="bg-white rounded-xl shadow-2xl p-3 text-center persian-numbers border-2 border-blue-700">
       <h3 id="portfolio-title" class="text-2xl font-extrabold text-purple-800 mb-2 drop-shadow-lg">طلای آبشده</h3>
       <p id="portfolio-value" class="text-xl font-extrabold persian-numbers text-black mt-3 drop-shadow-lg">مقدار ریالی سرمایه گذاری: ۱۴۳۰۰۰</p>
-      <p id="merged-value" class="text-xl font-bold persian-numbers text-black mt-2 drop-shadow-lg">...</p>
-      <p id="profit-percent" class="text-xl font-bold persian-numbers mt-2 drop-shadow-lg">...</p>
+      <p id="merged-value" class="text-xl font-bold persian-numbers text-black mt-2 drop-shadow-lg"></p>
+      <p id="profit-percent" class="text-xl font-bold persian-numbers mt-2 drop-shadow-lg"></p>
     </section>
 
-    <section id="final-box" class="bg-white rounded-xl shadow-2xl p-3 text-center text-black mt-3 persian-numbers border-2 border-blue-700">
+    <section id="final-box" 
+         class="bg-white rounded-xl shadow-2xl p-3 text-center text-black mt-3 persian-numbers border-2 border-blue-700 text-xl font-bold drop-shadow-lg">
       در حال محاسبه سود/زیان
     </section>
+
 
     <p id="last-update" class="text-sm text-black text-center drop-shadow-lg mt-4 persian-numbers">در حال دریافت زمان...</p>
   </main>
