--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
         if (Array.isArray(json)) arr = json;
         else if (json && Array.isArray(json.data)) arr = json.data;
         else if (json && Array.isArray(json.symbols)) arr = json.symbols;
-        else {
-          arr = Object.values(json).find(v => Array.isArray(v)) || null;
-        }
+        else arr = Object.values(json).find(v => Array.isArray(v)) || null;
         const found = findkahrobaInArray(arr);
         if (found) return found;
       } catch (e) {}
@@ -127,17 +125,24 @@
         fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin,tether&vs_currencies=usd&include_24hr_change=true'),
         fetch('https://brsapi.ir/Api/Market/Gold_Currency.php?key=FreeTZPrEbgTZzbW2SSGXOlzjlulRFcz')
       ]);
+
       const cg = cgRes.ok ? await cgRes.json() : {};
       const brs = brsRes.ok ? await brsRes.json() : {};
 
-      // بیت کوین
       const bitcoin = cg.bitcoin || null;
-      const BTC_USD = bitcoin ? bitcoin.usd : 0;
-      const BTC_RIAL = Math.floor(BTC_AMOUNT * BTC_USD * (brs.currency?.find(i=>i.symbol==='USDT_IRT')?.price||1));
-      const btcProfitPercent = INVESTMENT_BTC ? ((BTC_RIAL - INVESTMENT_BTC)/INVESTMENT_BTC)*100 : 0;
-      const btcColor = btcProfitPercent >0?'green':btcProfitPercent<0?'red':'black';
+      const tether = cg.tether || null;
 
+      // USDT/IRT
+      const usdtObj = brs.currency?.find(i => i.symbol==='USDT_IRT') || {};
+      const usdtPrice = usdtObj.price || 1;
+
+      // بیت کوین
       if(bitcoin){
+        const BTC_USD = bitcoin.usd || 0;
+        const BTC_RIAL = Math.floor(BTC_AMOUNT * BTC_USD * usdtPrice);
+        const btcProfitPercent = INVESTMENT_BTC ? ((BTC_RIAL - INVESTMENT_BTC)/INVESTMENT_BTC)*100 : 0;
+        const btcColor = btcProfitPercent>0?'green':btcProfitPercent<0?'red':'black';
+
         animateElement('crypto-box', `
           <div class="text-2xl font-extrabold drop-shadow-lg text-purple-800">بیت کوین</div>
           <div class="space-y-1 mt-5 text-lg font-bold drop-shadow-lg">
@@ -161,10 +166,11 @@
         const result = Math.floor((kahroba_UNITS * (kahroba.pc / 10)) - ((kahroba_UNITS * (kahroba.pc / 10))*0.12/100));
         const fundProfitPercent = INVESTMENT_KAHROBA ? ((result - INVESTMENT_KAHROBA)/INVESTMENT_KAHROBA)*100 : 0;
         const fundColor = fundProfitPercent>0?'green':fundProfitPercent<0?'red':'black';
+
         animateElement('fund-price-box', `<span style="color:${fundColor}">صندوق کهربا: ${toPersianNumber(Math.floor(kahroba.pc).toLocaleString())} (${toPersianNumber(Math.abs(fundProfitPercent).toFixed(2))}%)</span>`);
 
-        // merged و بازدهی نهایی
-        const merged = BTC_RIAL + result;
+        // merged-value و final-box
+        const merged = (bitcoin ? Math.floor(BTC_AMOUNT * bitcoin.usd * usdtPrice) : 0) + result;
         const profitAmount = merged - INVESTMENT_BASE;
         const profitPercent = INVESTMENT_BASE ? (profitAmount/INVESTMENT_BASE)*100 : 0;
         const profitColor = profitPercent>0?'green':profitPercent<0?'red':'black';
@@ -175,7 +181,41 @@
         finalBox.innerText = `بازدهی: ${toPersianNumber(Math.abs(profitAmount))} (${toPersianNumber(Math.abs(profitPercent).toFixed(2))}%)`;
       }
 
-      // زمان آخرین بروزرسانی
+      // نمایش دلار، تتر، طلا و سایر عناصر همانند قبل
+      const usd = brs.currency?.find(i=>i.symbol==='USD') || {};
+      const gold18 = brs.gold?.find(i=>i.symbol==='IR_GOLD_18K') || {};
+
+      if(usd){
+        const color = usd.change_value>0?'green':usd.change_value<0?'red':'black';
+        animateElement('usd-box', `<span style="color:${color}">دلار: ${toPersianNumber(Math.floor(usd.price).toLocaleString())} (${toPersianNumber(Math.abs(usd.change_value).toLocaleString())} | ${toPersianNumber(Math.abs(usd.change_percent.toFixed(2)))}%)</span>`);
+      }
+
+      if(usdtObj){
+        const color = usdtObj.change_percent>0?'green':usdtObj.change_percent<0?'red':'black';
+        animateElement('usdt-box', `<span style="color:${color}">تتر: ${toPersianNumber(usdtPrice.toLocaleString())} (${toPersianNumber(Math.abs(usdtObj.change_value).toLocaleString())} | ${toPersianNumber(Math.abs(usdtObj.change_percent.toFixed(2)))}%)</span>`);
+      }
+
+      if(gold18){
+        const color = gold18.change_percent>0?'green':gold18.change_percent<0?'red':'black';
+        animateElement('gold18-box', `<span style="color:${color}">طلای ۱۸ عیار: ${toPersianNumber(Math.floor(gold18.price).toLocaleString())} (${toPersianNumber(Math.abs(gold18.change_value).toLocaleString())} | ${toPersianNumber(Math.abs(gold18.change_percent.toFixed(2)))}%)</span>`);
+      }
+
+      // حباب طلا
+      const ounceGold = brs.gold?.find(i=>i.symbol==='XAUUSD');
+      if(ounceGold && usd){
+        const gvalue = ((ounceGold.price * usd.price) / 31.1034768) * 0.75;
+        const gbubble = gold18 ? ((gold18.price - gvalue)/gvalue)*100 : 0;
+        const goldbubbleElement = document.getElementById('goldbubble');
+        const formattedGbubble = toPersianNumber(Math.abs(gbubble).toFixed(2)) + "٪" + (gbubble<0?"−":"");
+        if(goldbubbleElement) goldbubbleElement.innerText = formattedGbubble;
+        const goldBubbleBox = document.getElementById('gold-bubble');
+        goldBubbleBox.classList.remove('bg-green-800','bg-blue-800','bg-red-800');
+        if(gbubble<0) goldBubbleBox.classList.add('bg-green-800');
+        else if(gbubble>=0 && gbubble<1) goldBubbleBox.classList.add('bg-blue-800');
+        else goldBubbleBox.classList.add('bg-red-800');
+      }
+
+      // آخرین بروزرسانی
       const now = new Date();
       document.getElementById('last-update').innerText = `آخرین بروزرسانی: ${toPersianNumber(now.toLocaleDateString('fa-IR'))} - ${toPersianNumber(now.toLocaleTimeString('fa-IR').replace(/:\d+$/,''))}`;
 
